2004-10-05  Christian Kellner  <gicmo@gnome-de.org>

	* modules/http-neon-method.c (http_transfer_start_read): Fix leaking a
	req in a error case. This should fix bug #152842.

2004-10-05  Christian Kellner  <gicmo@gnome-de.org>

	* ne_gnomevfs.c (ne_sock_connect): Use the same method as in
	ne_negotiate_ssl ( ). 
	(ne_sock_close): Don't free the socket because it will get be
	freed in gnome_vfs_socket_buffer_destroy ( ).
	This should fix bug #154300.

2004-10-05  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-mime-handlers.c (gnome_vfs_mime_get_default_action_type):
	Temporary workaround to make show_url handle folders. This needs
	rethinking.

2004-09-27  Ray Strode  <rstrode@redhat.com>
	* libgnomevfs/eggdesktopentries.c
	(egg_desktop_entries_get_locale_encoding):
	swap if and else clauses to prevent needlessly 
	misallocating gigabytes of memory  (Spotted 
	by Nicholas Miell, bug 153759).

2004-09-27  Ray Strode  <rstrode@redhat.com>
	* libgnomevfs/eggdesktopentries.c
	(egg_find_file_in_data_dirs): use g_error_new
	instead g_set_error.
	(egg_find_file_in_data_dir): get rid of the
	secondary error cruft.
	(egg_desktop_entries_free): free 
	entries->default_group_name
	(egg_desktop_entries_get_locale_country):
	swap if and else clauses to prevent needlessly 
	misallocating gigabytes of memory  (Spotted 
	by Nicholas Miell, bug 153759).

2004-09-22  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-unix-mounts.[ch]:
	* libgnomevfs/gnome-vfs-volume-monitor-daemon.c:
	Try to reuse children when getting dev_t by stating.
	Fixes bug 151026. Patch from Morten Welinder.

	* configure.in:
	Post release version bump.
	
=== gnome-vfs 2.8.1 ===

2004-09-21  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for 2.8.1

	* modules/http-proxy.c: (construct_gl_http_proxy):
	Make sure proxy is non-empty before using it.
	Patch from Mark McLoughlin.

2004-09-21  Alexander Larsson  <alexl@redhat.com>

	* modules/http-neon-method.c: