@@ -1,3 +1,9 @@
+2004-10-06  Christian Kellner  <gicmo@gnome-de.org>
+
+	* modules/http-neon-method.c: Add support for additional and received
+	headers callbacks. This fixes bug #150561.
+	Also fixed some debugging macros.
+	
 2004-10-05  Christian Kellner  <gicmo@gnome-de.org>
 
 	* modules/http-neon-method.c (http_transfer_start_read): Fix leaking a
